--- a/haproxy/templates/default/haproxy.cfg.erb
+++ b/haproxy/templates/default/haproxy.cfg.erb
@@ -92,6 +92,7 @@ backend php_app_servers_ssl
   <% end -%>  
 <% end -%>
 
+
 <% if !node[:haproxy][:nodejs_backends].empty? -%>
 backend nodejs_app_servers
   balance <%= node[:haproxy][:balance] %>
@@ -102,6 +103,29 @@ backend nodejs_app_servers
   server <%= backend['name'] %> <%= backend['ip'] %>:80 weight <%= backend['backends'] || 10 %> maxconn <%= backend['backends'] * node[:haproxy][:maxcon_factor_nodejs_app] %> check inter <%= node[:haproxy][:check_interval] %>
   <% end -%>
 <% end -%>
+
+<% if !node[:custom_ports].empty && !node[:custom_ports][:apps].empty? -%>
+  <% node[:custom_ports][:apps].each do |app_name, app_config| -%>
+    backend nodejs_app_servers
+      balance <%= node[:haproxy][:balance] %>
+      option redispatch
+      option forwardfor
+      option httpchk <%= node[:haproxy][:health_check_method] %> <%= node[:haproxy][:health_check_url] %>
+      <% node[:haproxy][:nodejs_backends].each do |backend| -%>
+      server <%= backend['name'] %> <%= backend['ip'] %>:<%= app_config['port'] %> weight <%= backend['backends'] || 10 %> maxconn <%= backend['backends'] * node[:haproxy][:maxcon_factor_nodejs_app] %> check inter <%= node[:haproxy][:check_interval] %>
+      <% end -%>
+  <% end -%>
+<% end -%>
+
+# all domains of node.js applications
+  <% node[:haproxy][:node].each do |app_name, app_config| -%>
+    <% app_config['domains'].each do |domain| -%>
+  acl nodejs_application_<%= app_name %>_domain_<%= domain.gsub(/[^\w.:-]/, '_') %> hdr_end(host) -i <%= domain %>
+      <% if app_config['mounted_at'] -%>
+  acl nodejs_application_<%= app_name %>_domain_<%= domain.gsub(/[^\w.:-]/, '_') %>_path path_beg <%= app_config['mounted_at'] %>
+      <% end -%>
+    <% end -%>
+  <% end -%>
 
 <% if !node[:haproxy][:nodejs_backends].empty? -%>
 backend nodejs_app_servers_ssl
